Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -932,8 +932,8 @@
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Stock máximo",
-    "may": "Mayo",
-    "mega-search": "MegaBuscador",
+    "may": "Květen",
+    "mega-search": "MegaHledání",
     "memcache": "Memcache",
     "memcache-clear": "Memcache limpiada.",
     "memcache-delete-key-item": "Eliminado elemento '%item%' de Memcache.",
@@ -959,26 +959,26 @@
     "missing-file": "Falta el archivo",
     "missing-file-help": "Parece que este archivo no se encuentra en tu instalación. Quizás no lo uses, pero <em>no puedes eliminarlo<\/em>.",
     "mobile": "Móvil",
-    "model": "Modelo",
+    "model": "Model",
     "model-not-found": "Modelo no encontrado: %model%",
     "monday": "Lunes",
     "month": "Mes",
-    "month-1": "Enero",
-    "month-10": "Octubre",
-    "month-11": "Noeviembre",
-    "month-12": "Diciembre",
-    "month-2": "Febrero",
-    "month-3": "Marzo",
-    "month-4": "Abril",
-    "month-5": "Mayo",
-    "month-6": "Junio",
-    "month-7": "Julio",
-    "month-8": "Agosto",
-    "month-9": "Septiembre",
+    "month-1": "Leden",
+    "month-10": "Říjen",
+    "month-11": "Listopad",
+    "month-12": "Prosinec",
+    "month-2": "Únor",
+    "month-3": "Březen",
+    "month-4": "Duben",
+    "month-5": "Květen",
+    "month-6": "Červen",
+    "month-7": "Červenec",
+    "month-8": "Srpen",
+    "month-9": "Září",
     "month-name": "Nombre del Mes",
     "month-wildcard-info": "Mes actual (de la fecha actual)",
     "monthly": "Mensual",
-    "monthly-payment": "Pago mensual",
+    "monthly-payment": "Měsíční platba",
     "months": "Meses",
     "more": "Más",
     "more-fields": "Más campos",
@@ -1016,7 +1016,7 @@
     "no-invoice": "Sin factura",
     "no-outstanding-amount": "No hay importe pendiente",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
-    "no-reference": "Sin referencia",
+    "no-reference": "Bez reference",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
     "non-editable-accounting-entry": "Asiento no editable",
