--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -661,7 +661,7 @@
     "general-concepts": "Kontzeptu orokorrak",
     "general-data": "Datu orokorrak",
     "generate": "Sortu",
-    "generate-accounting-entries": "Generar asientos",
+    "generate-accounting-entries": "Asientoak sortu",
     "generate-accounting-entry": "Kontabilitate idazpena sortu",
     "generate-doc-type": "Sortzen duen documentu mota",
     "generate-invoice": "Faktura sortu",
@@ -712,7 +712,7 @@
     "has-attachments": "Eranskinak ditu",
     "has-parent": "Arbasoa dauka",
     "hash": "Hash",
-    "header": "Cabecera",
+    "header": "Goiburua",
     "heading-account-group-id": "Epigrafe taldearen ID",
     "heading-account-id-root": "Kontu nagusiaren erroa",
     "health": "Osasuna",
@@ -808,14 +808,14 @@
     "items-removed-correctly": "%num% elementu behar bezala kenduta",
     "ivarep-subaccount-not-found": "Irteerako BEZaren azpikontua ez da aurkitu",
     "ivasop-account-not-found": "Sarrerako BEZaren azpikontua ez da aurkitu",
-    "january": "Enero",
+    "january": "Urtarrila",
     "job-name": "Lanaren izena",
     "journal": "Egunerokoa",
     "journal-closing": "Itxieraren egunkaria",
     "journal-opening": "Irikitzearen egunkaria",
     "journals": "Egunerokoak",
-    "july": "Julio",
-    "june": "Junio",
+    "july": "Uztaila",
+    "june": "Ekaina",
     "justified": "Justifikatuta",
     "key-google-maps": "Clave de Google Maps",
     "keys": "Gakoak",
@@ -922,7 +922,7 @@
     "manufacturer": "Fabrikatzailea",
     "manufacturer-code": "Fabrikatzailearen kodea",
     "manufacturers": "Fabrikatzaileak",
-    "march": "Marzo",
+    "march": "Martxo",
     "margin": "Marjina",
     "margin-top": "Goiko marjina",
     "mark-as-homepage": "Hasierako orria ezarri",
@@ -932,8 +932,8 @@
     "maximum-amount-with-cifnif": "Gehienezko zenbatekoa IFK\/IFZrekin",
     "maximum-amount-without-cifnif": "Gehieneko zenbatekoa IFK\/IFZ gabe",
     "maximum-stock": "Stock maximoa",
-    "may": "Mayo",
-    "mega-search": "MegaBuscador",
+    "may": "Maiatza",
+    "mega-search": "MegaBilaketa",
     "memcache": "Memcache",
     "memcache-clear": "Memcache garbituta.",
     "memcache-delete-key-item": "Memcache-tik '%item%' elementua ezabatu da.",
