--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -547,40 +547,40 @@
     "error-updating-product-stock": "Erreur lors de la mise à jour du stock !",
     "errors": "erreurs",
     "es_EC": "Espagnol (Équateur)",
-    "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
-    "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
-    "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
-    "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
-    "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
-    "es-tax-exception-e6": "España: excepción por otra causa",
-    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-cash-criteria": "Criterio de caja",
-    "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-exempt": "Exento",
-    "es-tax-regime-general": "Régimen general",
-    "es-tax-regime-gold": "Régimen especial del oro de inversión",
-    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
-    "es-tax-regime-simplified": "Régimen simplificado",
-    "es-tax-regime-surcharge": "Recargo de equivalencia",
-    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
-    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
-    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
+    "es-tax-exception-e1": "Espagne: exception pour l'article 20 de la loi sur la TVA",
+    "es-tax-exception-e2": "Espagne: exception pour l'article 21 de la loi sur la TVA",
+    "es-tax-exception-e3": "Espagne: exception pour l'article 22 de la loi sur la TVA",
+    "es-tax-exception-e4": "Espagne: exception pour les articles 23 et 24 de la loi sur la TVA",
+    "es-tax-exception-e5": "Espagne: exception pour l'article 25 de la loi sur la TVA",
+    "es-tax-exception-e6": "Espagne: exception pour une autre raison",
+    "es-tax-regime-agrarian": "Régime spécial de l'agriculture, de l'élevage et de la pêche",
+    "es-tax-regime-cash-criteria": "Critère de caisse",
+    "es-tax-regime-especial-agp": "Régime spécial de l'agriculture, de l'élevage et de la pêche",
+    "es-tax-regime-exempt": "Exempté",
+    "es-tax-regime-general": "Régime général",
+    "es-tax-regime-gold": "Régime spécial de l'or d'investissement",
+    "es-tax-regime-group-entities": "Régime spécial de groupe d'entités",
+    "es-tax-regime-simplified": "Régime simplifié",
+    "es-tax-regime-surcharge": "Surtaxe d'équivalence",
+    "es-tax-regime-telecom": "Régimes spéciaux applicables aux services de télécommunications, de radiodiffusion ou de télévision et aux services fournis par voie électronique",
+    "es-tax-regime-travel": "Régime spécial des agences de voyage",
+    "es-tax-regime-used-goods": "Régime spécial des biens d'occasion, des objets d'art, des antiquités et des objets de collection",
     "estimation": "devis",
     "estimation-email-subject": "Votre devis %code%",
     "estimation-email-text": "Bonjour, vous trouverez votre devis %code% en pièce jointe",
     "estimations": "devis",
-    "event": "Evento",
-    "events": "Eventos",
+    "event": "Événement",
+    "events": "Événements",
     "exceptions": "Exceptions",
     "excess": "En excès",
-    "exclude-invalid": "Excluir inválidos",
+    "exclude-invalid": "Exclure les invalides",
     "exclude-valid": "Excluir válidos",
     "exempt": "Exempter",
     "exercise": "Exercice",
     "exercise-date-out-range": "La date ne se trouve pas dans la période de l'exercice.",
     "exercise-date-range-exists": "Il existe déjà un exercice dans cette période (%start% - %end%)",
     "exercise-not-found": "Exercice non trouvé.",
-    "exercise-without-accounting-plan": "El ejercicio %exercise% todavía no tiene plan contable",
+    "exercise-without-accounting-plan": "L'exercice %exercise% n'a pas encore de plan comptable",
     "exercises": "Des exercices",
     "exit": "Sortie",
     "expedient": "Expéditeur",
@@ -589,27 +589,27 @@
     "expiration": "Délai d'échéance",
     "expiration-type": "Type d'échéance",
     "expired": "Échu",
-    "expired-receipt": "Recibo vencido",
+    "expired-receipt": "Reçu expiré",
     "export": "Exporter",
     "export-bill": "Facture d'exportation",
     "extra-file": "Fichier supplémentaire",
-    "failed": "Fallido",
+    "failed": "Échoué",
     "families": "Des familles",
     "family": "Famille",
     "family-code": "Code familial",
     "fax": "Fax",
-    "february": "Febrero",
+    "february": "Février",
     "field-can-not-be-null": "Le champ %fieldName% du tableau %tableName% ne peut être nul",
-    "field-required": "Campo requerido: %field%",
-    "fields": "Campos",
+    "field-required": "Champ requis : %field%",
+    "fields": "Champs",
     "file": "Fichier",
-    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
+    "file-extension-not-accepted": "Erreur lors de l'envoi du fichier %fileName% car son extension n'est pas autorisée. Les extensions autorisées sont : %accepted%",
     "file-name": "Nom du fichier",
     "file-not-exists": "Le fichier n'existe pas : %fileName%",
     "file-not-found": "Le fichier %fileName% non trouvé.",
     "file-not-supported": "Fichier non pris en charge",
-    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
-    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
+    "file-size-error": "Erreur lors de l'envoi du fichier %fileName% car il dépasse la taille maximale autorisée de %maxSize% Mo",
+    "file-type-error": "Erreur lors de l'envoi du fichier de type %typeFile%. Les types autorisés sont : audio, document, image et vidéo.",
     "file-yet-exists": "Le fichier existe déjà : %filePath%",
     "filecache-clear": "Filecache effacé.",
     "filecache-delete-key-item": "Élément supprimé '%item%' de Filecache.",
@@ -620,7 +620,7 @@
     "filter-records-containing-indicated-value": "Filtrer les enregistrements contenant la valeur indiquée",
     "filters": "Filtres",
     "finalize": "finaliser",
-    "find-problems": "Encontrar problemas",
+    "find-problems": "Trouver des problèmes",
     "finished-cron": "L'exécution des tâches programmées FacturaScripts est terminée. Temps nécessaire : %timeNeeded%",
     "first-quarter": "Primer trimestre",
     "first-steps": "Premiers pas",
