--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -130,7 +130,7 @@
     "auth-token-invalid": "Token di autenticazione non valido",
     "authentication": "autenticazione",
     "auto": "Auto",
-    "auto-apply-to": "auto-apply-to",
+    "auto-apply-to": "Applicazione automatica a",
     "automatic": "Automatico",
     "available": "A disposizione",
     "average": "Metà",
@@ -186,7 +186,7 @@
     "cant-assing-subaccount-supplier": "Impossibile associare il subaccount al provider 0",
     "cant-associate-customer-subaccount": "Impossibile associare il subaccount per il client 0",
     "cant-change-accounting-entry-exercise": "Non è possibile cambiare l'esercizio dell'operazione contabile. Creane uno nuovo.",
-    "cant-change-agent-in-settlement": "cant-change-agent-in-settlement",
+    "cant-change-agent-in-settlement": "non è possibile cambiare l'agente nella regolazione",
     "cant-connect-database": "Impossibile connettersi al database!",
     "cant-convert-to-innodb": "Impossibile convertire la tabella %1$s to'InnoDB Essenziale per FacturaScripts.",
     "cant-create-customer-subaccount": "Impossibile creare il subaccount cliente",
@@ -204,9 +204,9 @@
     "cant-delete-variant-with-documents": "Impossibile eliminare il prodotto o variante %reference% perché è già stato acquistato o venduto. Puoi però bloccarlo se desideri.",
     "cant-load-controller": "Impossibile caricare il controller.",
     "cant-modify-reference": "Non modificare il riferimento.",
-    "cant-remove-accounting-entry": "cant-remove-accounting-entry",
+    "cant-remove-accounting-entry": "impossibile rimuovere l'entrata contabile",
     "cant-remove-invoice-refund": "Impossibile eliminare una fattura che ha già una fattura di rimborso",
-    "cant-remove-receipt": "cant-remove-receipt",
+    "cant-remove-receipt": "impossibile rimuovere il ricevimento",
     "cant-update-audit-log": "Impossibile aggiornare un registro di audit",
     "card": "Carta",
     "carrier": "Vettore",
@@ -242,15 +242,15 @@
     "clone-account-entry": "Duplicate the accounting entry",
     "close": "vicino",
     "close-box": "Chiudi cassa",
-    "close-exercise": "close-exercise",
+    "close-exercise": "chiudere l'esercizio",
     "closed": "Closed",
     "closed-exercise": "L'esercizio 0 è chiuso.",
     "closed-exercise-cant-change-date": "L'esercizio 0 è chiuso. Non puoi cambiare la data.",
     "closing-accounting-completed": "Chiusura contabile completata",
-    "closing-closing-concept": "closing-closing-concept",
-    "closing-opening-concept": "closing-opening-concept",
+    "closing-closing-concept": "concetto di chiusura di chiusura",
+    "closing-opening-concept": "concetto di apertura di chiusura",
     "closing-operation": "Chiusura",
-    "closing-regularization-concept": "closing-regularization-concept",
+    "closing-regularization-concept": "concetto di regolarizzazione di chiusura",
     "codbarras": "Codice a barre",
     "code": "codice",
     "codiso": "Codice ISO",
@@ -298,12 +298,12 @@
     "contact-information": "informazioni-di-contatto",
     "contact-person": "Referente",
     "contacts": "Contatti",
-    "context": "Contexto",
+    "context": "Contesto",
     "continue": "continuare",
-    "contract": "contract",
-    "contracts": "contracts",
+    "contract": "contratto",
+    "contracts": "contratti",
     "control-panel": "pannello di controllo",
-    "control-panel-decimal-warning": "Advertencia: este cambio se aplicará a los precios de productos, pero también a los totales de facturas, asientos, etc.",
+    "control-panel-decimal-warning": "Avviso: questa modifica si applicherà ai prezzi dei prodotti ma anche ai totali delle fatture, note, ecc.",
     "controller": "controllore",
     "controller-error": "Errore del controller",
     "controller-not-found": "Controllore non trovato",
@@ -312,24 +312,24 @@
     "convert-into-customer": "convert-into-customer",
     "convert-into-supplier": "convert-to-supplier",
     "cookies": "Cookies",
-    "copy": "copy",
-    "copy-p": "copy-p",
-    "copy-subaccounts": "copy-subaccounts",
+    "copy": "copia",
+    "copy-p": "copia p",
+    "copy-subaccounts": "copia sottocconti",
     "core-update": "Aggiornamento alla versione %version%",
-    "core-update-warning": "Advertencias de actualización",
-    "correct": "Correcto",
-    "cost": "Coste",
+    "core-update-warning": "Avvisi di aggiornamento",
+    "correct": "Corretto",
+    "cost": "Costo",
     "cost-price": "Prezzo di costo",
-    "cost-price-policy": "cost-price-policy",
-    "counterpart": "Offsetting",
+    "cost-price-policy": "politica dei prezzi di costo",
+    "counterpart": "Compensativo",
     "countries": "paesi",
     "country": "Nazione",
     "country-not-in-eu": "Il %codiso% non appartiene a nessun paese dell'Unione Europea",
-    "create": "create",
+    "create": "creare",
     "create-accounting-entry": "Create Accounting Entry",
-    "create-delivery-note": "Crear albarán",
-    "create-estimation": "Crear presupuesto",
-    "create-invoice": "Crear factura",
+    "create-delivery-note": "Creare bolla di consegna",
+    "create-estimation": "Creare preventivo",
+    "create-invoice": "Creare fattura",
     "create-new-record": "Crea un nuovo record",
     "created": "Created",
     "created-default-admin-account": "Ha creato utente <b> amministratore <\/ b> con la password <b> amministratore <\/ b>.",
