--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1459,7 +1459,7 @@
     "supplier-delivery-notes": "Albaranes de proveedores",
     "supplier-estimation": "Presupuesto de Proveedor",
     "supplier-estimations": "Presupuestos de proveedores",
-    "supplier-have-no-iban": "El proveedor %%supplier no tiene IBAN (cuenta bancaria)",
+    "supplier-have-no-iban": "Dostawca %%supplier nie posiada IBAN (numer konta bankowego)",
     "supplier-invoice": "Factura de Proveedor",
     "supplier-invoice-deleted-successfully": "Factura de compra %docCode% ha sido eliminada correctamente.",
     "supplier-invoices": "Facturas de proveedores",
@@ -1470,7 +1470,7 @@
     "supplier-products": "Productos del proveedor",
     "supplier-reference": "Referencia de proveedor",
     "suppliers": "Proveedores",
-    "support": "Soporte",
+    "support": "Wsparcie",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Subcuenta impuesto soportado",
     "surcharge": "Recargo",
@@ -1497,7 +1497,7 @@
     "tax-transport": "Impuestos del transporte",
     "taxes": "Impuestos",
     "telemetry-data-to-send": "Las instalaciones registradas notifican periódicamente la versión de FacturaScripts, PHP, país, idioma y listado de plugins.",
-    "telephone-prefix": "Prefijo telefónico",
+    "telephone-prefix": "Prefiks telefoniczny",
     "template": "Plantilla",
     "template-error": "Error en la plantilla",
     "template-not-found": "Plantilla no encontrada",
@@ -1526,7 +1526,7 @@
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
-    "to-report": "Informar",
+    "to-report": "Zgłosić",
     "today": "Hoy",
     "total": "Total",
     "total-amount": "Suma total",
@@ -1582,12 +1582,12 @@
     "update-time": "Hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualizador",
-    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
+    "updating-attached-relations": "Aktualizowanie powiązań załączonych plików",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
     "url": "Dirección web",
     "use-gaps": "Usar huecos",
-    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
+    "use-holes-invoices-esp": "Jeśli odznaczysz użytkowanie otworów w fakturach i usuniesz któreś, pozostanie otwór w fakturyacji i będziesz miał problemy z urzędem skarbowym",
     "user": "Usuario",
     "user-and-config": "Usuario y configuración",
     "users": "Usuarios",
@@ -1608,8 +1608,8 @@
     "vat": "IVA",
     "vat-document": "Documento",
     "vat-exception": "Excepción de IVA",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-number-is-short": "Numer '%vat-number%' jest zbyt krótki",
+    "vat-number-not-vies": "Numer '%vat-number%' nie jest zarejestrowany w systemie VIES",
     "vat-regime": "Régimen impuestos",
     "VAT-register": "Impuestos",
     "vat-regularization": "Regularización de IVA",
@@ -1617,11 +1617,11 @@
     "verified": "Verificado",
     "version": "Versión",
     "video": "Video",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
-    "view-api": "Ver API",
+    "vies-check-success": "Numer '%vat-number%' jest zarejestrowany w systemie VIES",
+    "view-api": "Zobacz API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
-    "view-estimation": "Ver presupuesto",
-    "view-order": "Ver pedido",
+    "view-estimation": "Zobacz kosztorys",
+    "view-order": "Zobacz zamówienie",
     "warehouse": "Almacén",
     "warehouse-cant-be-same": "El almacén de orígen y de destino no puede ser el mismo.",
     "warehouse-must-be-same-business": "Los almacenes de origen y destino deben ser de la misma empresa",
@@ -1640,14 +1640,14 @@
     "wildcard-title": "Comodines reemplazables por valor",
     "without-closure": "Sin el cierre",
     "without-domicile": "Sin domiciliar",
-    "without-groups": "Sin grupo",
+    "without-groups": "Bez grup",
     "without-regularization": "Sin regularización",
     "without-tax": "Sin IVA",
     "without-taxation": "Sin impuestos",
     "wizard": "Asistente",
     "wizard-p": "Rellene este formulario sobre su negocio para terminar la configuración.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
-    "work-events": "Eventos de trabajo",
+    "work-events": "Wydarzenia pracy",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Columna X",
