--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -212,7 +212,7 @@
     "carrier": "Transportadora",
     "carriers": "Transportadoras",
     "cash": "Dinheiro",
-    "categories": "Categorias",
+    "categories": "Categorías",
     "category": "Categoria",
     "cc": "CC",
     "center": "Center",
@@ -241,7 +241,7 @@
     "clone": "Clone",
     "clone-account-entry": "Duplicate the accounting entry",
     "close": "Fechar",
-    "close-box": "Cerrar caja",
+    "close-box": "Fechar caixa",
     "close-exercise": "close-exercise",
     "closed": "Closed",
     "closed-exercise": "O exercício 0 está fechado.",
