--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -186,13 +186,13 @@
     "cant-assing-subaccount-supplier": "Não é possível associar subconta para provedor 0",
     "cant-associate-customer-subaccount": "Não é possível associar a subconta do cliente 0",
     "cant-change-accounting-entry-exercise": "No se puede cambiar el ejercicio del asiento. Cree uno nuevo.",
-    "cant-change-agent-in-settlement": "cant-change-agent-in-settlement",
+    "cant-change-agent-in-settlement": "No se puede cambiar el agente en el asentamiento",
     "cant-connect-database": "Não foi possível conectar ao banco de dados!",
     "cant-convert-to-innodb": "Não é possível converter a tabela '0' para InnoDB. Impresscindible para FacturaScripts.",
     "cant-create-customer-subaccount": "Não é possível criar subconta do cliente",
     "cant-create-folder": "Não é possível criar uma pasta.",
     "cant-create-subaccount-supplier": "Não é possível criar a subconta do provedor",
-    "cant-delete-audit-log": "No se puede eliminar un registro de auditoria",
+    "cant-delete-audit-log": "Não é possível eliminar o registro de auditoria",
     "cant-delete-default-company": "cant-delete-default-company",
     "cant-delete-default-country": "Não é possível eliminar o país padrão",
     "cant-delete-default-currency": "cant-delete-default-currency",
@@ -200,19 +200,19 @@
     "cant-delete-default-serie": "Não é possível eliminar a série padrão",
     "cant-delete-default-tax": "cant-delete-default-tax",
     "cant-delete-default-warehouse": "cant-delete-default-warehouse",
-    "cant-delete-last-user": "cant-delete-last-user",
-    "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea.",
+    "cant-delete-last-user": "No se puede eliminar el último usuario",
+    "cant-delete-variant-with-documents": "Não é possível eliminar o produto ou variante %reference% pois já foi comprada ou vendida. No entanto, pode bloqueá-la se desejar.",
     "cant-load-controller": "Não é possível carregar o controlador.",
     "cant-modify-reference": "Não pode editar a referência.",
-    "cant-remove-accounting-entry": "cant-remove-accounting-entry",
-    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
-    "cant-remove-receipt": "cant-remove-receipt",
-    "cant-update-audit-log": "No se puede modificar un registro de auditoria",
+    "cant-remove-accounting-entry": "No se puede eliminar la entrada contable",
+    "cant-remove-invoice-refund": "Não é possível eliminar uma fatura que já possui uma nota de crédito (devolução)",
+    "cant-remove-receipt": "No se puede eliminar el recibo",
+    "cant-update-audit-log": "No se puede actualizar el registro de auditoría",
     "card": "Cartão",
     "carrier": "Transportadora",
     "carriers": "Transportadoras",
     "cash": "Efectivo",
-    "categories": "Categorias",
+    "categories": "Categorías",
     "category": "Categoría",
     "cc": "CC",
     "center": "Center",
