--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -456,7 +456,7 @@
     "disable": "Desactivar",
     "disable-plugins": "Desactivar plugins",
     "disabled": "Desactivat",
-    "disabled-plugins": "Plugins desactivados",
+    "disabled-plugins": "Plugins desactivats",
     "discharge-date": "Data d'alta: %date%",
     "discount": "Desconte",
     "display": "Visualisació",
